--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <script src="https://js.stripe.com/v3/"></script>
 
-    <title>React App</title>
+    <title>Fall Vibes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
